aprendiendo a crear sitio

--- a/sitiofreelance/freelancer_inicio/index.html
+++ b/sitiofreelance/freelancer_inicio/index.html
@@ -1,11 +1,118 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Freelance</title>
 </head>
+
 <body>
-    
+    <header>
+        <h1>Alejandra Ojeda Freelance</h1>
+    </header>
+    <section>
+        <h2>Diseño y Desarrollo Frelance</h2>
+
+        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-map-pin" width="92" height="92"
+            viewBox="0 0 24 24" stroke-width="2" stroke="#ffbf00" fill="none" stroke-linecap="round"
+            stroke-linejoin="round">
+            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+            <path d="M9 11a3 3 0 1 0 6 0a3 3 0 0 0 -6 0" />
+            <path d="M17.657 16.657l-4.243 4.243a2 2 0 0 1 -2.827 0l-4.244 -4.243a8 8 0 1 1 11.314 0z" />
+        </svg>
+
+        <p>Neuquén - Argentina</p>
+        <a href="#">Contactar</a>
+    </section>
+    <nav>
+
+        <a href="#inicio">Inicio</a>
+        <a href="nosotros.html">Nosotros</a>
+        <a href="#clientes">Clientes</a>
+        <a href="#contacto">Contacto</a>
+
+    </nav>
+    <img src="img/hero.jpg" alt="Hero image">
+    <main>
+        <h2> Mis servicios</h2>
+        <section>
+            <h3>Diseño Web</h3>
+            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-palette" width="44" height="44"
+                viewBox="0 0 24 24" stroke-width="2" stroke="#000000" fill="none" stroke-linecap="round"
+                stroke-linejoin="round">
+                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                <path
+                    d="M12 21a9 9 0 0 1 0 -18c4.97 0 9 3.582 9 8c0 1.06 -.474 2.078 -1.318 2.828c-.844 .75 -1.989 1.172 -3.182 1.172h-2.5a2 2 0 0 0 -1 3.75a1.3 1.3 0 0 1 -1 2.25" />
+                <path d="M8.5 10.5m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0" />
+                <path d="M12.5 7.5m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0" />
+                <path d="M16.5 10.5m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0" />
+            </svg>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Maiores, repudiandae labore voluptatem officiis.</p>
+        </section>
+        <section>
+            <h3>Aplicaciones Web</h3>
+            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-android" width="44"
+                height="44" viewBox="0 0 24 24" stroke-width="2" stroke="#000000" fill="none" stroke-linecap="round"
+                stroke-linejoin="round">
+                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                <path d="M4 10l0 6" />
+                <path d="M20 10l0 6" />
+                <path d="M7 9h10v8a1 1 0 0 1 -1 1h-8a1 1 0 0 1 -1 -1v-8a5 5 0 0 1 10 0" />
+                <path d="M8 3l1 2" />
+                <path d="M16 3l-1 2" />
+                <path d="M9 18l0 3" />
+                <path d="M15 18l0 3" />
+            </svg>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Maiores, repudiandae labore voluptatem officiis.</p>
+        </section>
+        <section>
+            <h3>E-commerce</h3>
+            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-credit-card-filled" width="44"
+                height="44" viewBox="0 0 24 24" stroke-width="2" stroke="#000000" fill="none" stroke-linecap="round"
+                stroke-linejoin="round">
+                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                <path
+                    d="M22 10v6a4 4 0 0 1 -4 4h-12a4 4 0 0 1 -4 -4v-6h20zm-14.99 4h-.01a1 1 0 1 0 .01 2a1 1 0 0 0 0 -2zm5.99 0h-2a1 1 0 0 0 0 2h2a1 1 0 0 0 0 -2zm5 -10a4 4 0 0 1 4 4h-20a4 4 0 0 1 4 -4h12z"
+                    stroke-width="0" fill="currentColor" />
+            </svg>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Maiores, repudiandae labore voluptatem officiis.</p>
+        </section>
+    </main>
+
+    <section>
+        <h2>Contacto</h2>
+        <form action="#">
+            <fieldset>
+                <legend>Envíame un mensaje</legend>
+                <div>
+                    <label for="nombre">Nombre:</label>
+                    <input type="text" id="nombre" name="nombre" placeholder="Nombre">
+                </div>
+                <div>
+                    <label>Teléfono:</label>
+                    <input type="tel" id="telefono" name="telefono" placeholder="Teléfono">
+                </div>
+                <div>
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="email" placeholder="Email">
+                </div>
+                <div>
+                    <label for="mensaje">Mensaje:</label>
+                    <textarea id="mensaje" name="mensaje"></textarea>
+                </div>
+                <div><input type="submit">Enviar</input>
+                </div>
+
+            </fieldset>
+        </form>
+    </section>
+    <footer>
+        <p>© 2024 Alejandra Ojeda Freelance</p>
+    </footer>
 </body>
+
 </html>
