--- a/sitiofreelance/freelancer_inicio/index.html
+++ b/sitiofreelance/freelancer_inicio/index.html
@@ -5,11 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Freelance</title>
+    <link rel="preload" href="styles/styles.css" as="style"><!--esto cargara más rápido la hoja de estilo y luego la ejecutará-->
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 
 <body>
     <header>
-        <h1>Alejandra Ojeda Freelance</h1>
+        <h1 class="titulo">Alejandra Ojeda <span>Freelance</span></h1>
     </header>
     <section>
         <h2>Diseño y Desarrollo Frelance</h2>
