finalizo sitio freelancer- Nuevo sitio compra

--- a/sitiofreelance/freelancer_inicio/index.html
+++ b/sitiofreelance/freelancer_inicio/index.html
@@ -134,13 +134,13 @@
                         <textarea class="input-text"  id="mensaje" name="mensaje"></textarea>
                     </div>
                 </div> 
-                    <div><input class="boton w-100" type="submit">
+                    <div class="flex alinear-derecha"><input class="boton w-sm-100" type="submit">
                     </div>
                 </fieldset>
             </form>
         </section>  
     </main>
-    <footer>
+    <footer class="footer">
         <p>© 2024 Alejandra Ojeda Freelance</p>
     </footer>
 </body>
