--- a/frontstore/FrontEndStore_inicio/index.html
+++ b/frontstore/FrontEndStore_inicio/index.html
@@ -18,17 +18,142 @@
         </a>
     </header>
     <nav class="navegacion">
-        <a class="navegacion__enlace navegacion__enlace--activo" href="tienda.html">Tienda</a>
+        <a class="navegacion__enlace navegacion__enlace--activo" href="index.html">Tienda</a>
         <a class="navegacion__enlace" href="nosotros.html">Nosotros</a>
     </nav>
-
-
-
-
-
-
-
-
+    <main class="contenedor">
+        <h1> Nuestros Productos</h1>
+       <div class="grid">
+            <div class="producto"><!--producto-->
+                <a href="producto.html">
+                    <img class="producto__imagen" src="img/1.jpg" alt="producto">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">VueJs</p>
+                        <p class="producto__precio">$25500</p>
+                    </div>
+                </a>
+            </div><!--fin producto-->
+            <div class="producto"><!--producto-->
+                <a href="producto.html">
+                    <img class="producto__imagen" src="img/2.jpg" alt="producto">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">AngularJS</p>
+                        <p class="producto__precio">$25500</p>
+                    </div>
+                </a>
+            </div><!--fin producto-->
+            <div class="producto"><!--producto-->
+                <a href="producto.html">
+                    <img class="producto__imagen" src="img/3.jpg" alt="producto">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">ReactJS</p>
+                        <p class="producto__precio">$25500</p>
+                    </div>
+                </a>
+            </div><!--fin producto-->
+            <div class="producto"><!--producto-->
+                <a href="producto.html">
+                    <img class="producto__imagen" src="img/4.jpg" alt="producto">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">Ridux</p>
+                        <p class="producto__precio">$25500</p>
+                    </div>
+                </a>
+            </div><!--fin producto-->
+            <div class="producto"><!--producto-->
+                <a href="producto.html">
+                    <img class="producto__imagen" src="img/5.jpg" alt="producto">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">NodeJS</p>
+                        <p class="producto__precio">$25500</p>
+                    </div>
+                </a>
+            </div><!--fin producto-->
+            <div class="producto"><!--producto-->
+                <a href="producto.html">
+                    <img class="producto__imagen" src="img/6.jpg" alt="producto">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">Sass</p>
+                        <p class="producto__precio">$25500</p>
+                    </div>
+                </a>
+            </div><!--fin producto-->
+            <div class="producto"><!--producto-->
+                <a href="producto.html">
+                    <img class="producto__imagen" src="img/7.jpg" alt="producto">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">HMTL5</p>
+                        <p class="producto__precio">$25500</p>
+                    </div>
+                </a>
+            </div><!--fin producto-->
+            <div class="producto"><!--producto-->
+                <a href="producto.html">
+                    <img class="producto__imagen" src="img/8.jpg" alt="producto">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">Github</p>
+                        <p class="producto__precio">$25500</p>
+                    </div>
+                </a>
+            </div><!--fin producto-->
+            <div class="producto"><!--producto-->
+                <a href="producto.html">
+                    <img class="producto__imagen" src="img/9.jpg" alt="producto">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">BulmaCSS</p>
+                        <p class="producto__precio">$25500</p>
+                    </div>
+                </a>
+            </div><!--fin producto-->
+            <div class="producto"><!--producto-->
+                <a href="producto.html">
+                    <img class="producto__imagen" src="img/10.jpg" alt="producto">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">TypeScript</p>
+                        <p class="producto__precio">$25500</p>
+                    </div>
+                </a>
+            </div><!--fin producto-->
+            <div class="producto"><!--producto-->
+                <a href="producto.html">
+                    <img class="producto__imagen" src="img/11.jpg" alt="producto">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">Drupal</p>
+                        <p class="producto__precio">$25500</p>
+                    </div>
+                </a>
+            </div><!--fin producto-->
+            <div class="producto"><!--producto-->
+                <a href="producto.html">
+                    <img class="producto__imagen" src="img/12.jpg" alt="producto">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">JS</p>
+                        <p class="producto__precio">$25500</p>
+                    </div>
+                </a>
+            </div><!--fin producto-->
+            <div class="producto"><!--producto-->
+                <a href="producto.html">
+                    <img class="producto__imagen" src="img/13.jpg" alt="producto">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">GraphQL</p>
+                        <p class="producto__precio">$25500</p>
+                    </div>
+                </a>
+            </div><!--fin producto-->
+            <div class="producto"><!--producto-->
+                <a href="producto.html">
+                    <img class="producto__imagen" src="img/14.jpg" alt="producto">
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">VueJS</p>
+                        <p class="producto__precio">$25500</p>
+                    </div>
+                </a>
+            </div><!--fin producto-->
+            <div class="grafico grafico--camisas"></div>
+            <div class="grafico grafico--node"></div>
+        </div><!--fin div grid-->
+    </main>
 
     <!--Creamos El footer-->
     <footer class="footer">
