--- a/frontstore/FrontEndStore_inicio/producto.html
+++ b/frontstore/FrontEndStore_inicio/producto.html
@@ -22,7 +22,27 @@
         <a class="navegacion__enlace" href="nosotros.html">Nosotros</a>
     </nav>
     <main class="contenedor">
-        <h1>Productos</h1>
+        <h1>React JS</h1>
+        <div class="camisa">
+            <img class="camisa__imagen" src="img/3.jpg" alt="imagen producto">
+            <div class="camisa__contenido">
+                <p>
+                    Fusce aliquam dolor non purus blandit, fermentum rutrum lorem rhoncus. Suspendisse feugiat est sed volutpat maximus.
+                     Ut condimentum erat ac urna vulputate, eu consequat nunc aliquet. 
+                    Maecenas aliquam metus nibh, sit amet dignissim augue accumsan interdum. Maecenas commodo tempor neque vitae ornare.
+                </p>
+                <form class="formulario">
+                    <select class="formulario__campo">
+                        <option disabled selected>Seleccionar Talle</option>
+                        <option>Chica</option>
+                        <option>Mediana</option>
+                        <option>Grande</option>
+                    </select>
+                    <input class="formulario__campo" type="number" min="1">
+                    <input class="formulario__submit" type="submit" value="Agregar al Carrito">
+                </form>
+            </div>
+        </div>
     </main>
 
 
