--- a/practica/patrones/12-layout_shifter_flexbox/index.html
+++ b/practica/patrones/12-layout_shifter_flexbox/index.html
@@ -12,7 +12,7 @@
 
 <body>
 
-    <div class="contenedor">
+    <div class="contenedor layout-shifter">
         <aside>
             <h1>Titulo Blog (primera columna)</h1>
             <p>
@@ -21,7 +21,7 @@
             </p>
         </aside>
 
-        <main>
+        <main class="contenido-principal">
             <article class="entrada-blog">
                 <h1>Layout Shifter (segunda columna)</h1>
                 <img src="img/imagen1.jpg">
