vamos por el video 13 de 22 - terminamos catalogo pero no nos gusta como quedo el carrito

--- a/shop/catalogo.html
+++ b/shop/catalogo.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +9,172 @@
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="stylesheet" href="styles/normalize.css">
 </head>
-<body>
 
+<body>
+    <section class="main-container">
+        <div class="card-container">
+            <div class="product-car">
+                <img src="./img/pexels-dreamypixel-552774.jpg" alt="producto" class="product-img">
+                <div class="product-info">
+                   <div>
+                    <p>$1200</p>
+                    <p>Producto 1</p>
+                   </div>
+
+                    <figure>
+                        <img src="./img/icons/bt_add_to_cart.svg" alt="icono de carrito" class=" product-info icon">
+                    </figure>
+                </div>
+            </div>
+            <div class="product-car">
+                <img src="./img/pexels-pixabay-162426.jpg" alt="producto" class="c">
+                <div class="product-info" >
+                    <div>
+                        <p>$1200</p>
+                        <p>Producto 1</p>
+                       </div>
+                    <figure>
+                        <img src="./img/icons/bt_add_to_cart.svg" alt="icono de carrito" class=" product-info icon">
+                    </figure>
+                </div>
+            </div><!--fin tarjeta-->
+            <div class="product-car">
+                <img src="./img/pexels-pixabay-276517.jpg" alt="producto" class="product-img">
+                <div class="product-info">
+                   <div>
+                    <p>$1200</p>
+                    <p>Producto 1</p>
+                   </div>
+
+                    <figure>
+                        <img src="./img/icons/bt_add_to_cart.svg" alt="icono de carrito" class=" product-info icon">
+                    </figure>
+                </div>
+            </div>
+            <div class="product-car">
+                <img src="./img/pexels-taryn-elliott-4198566.jpg" alt="producto" class="c">
+                <div class="product-info" >
+                    <div>
+                        <p>$1200</p>
+                        <p>Producto 1</p>
+                       </div>
+                    <figure>
+                        <img src="./img/icons/bt_add_to_cart.svg" alt="icono de carrito" class=" product-info icon">
+                    </figure>
+                </div>
+            </div><!--fin tarjeta-->
+            <div class="product-car">
+                <img src="./img/pexels-pixabay-162426.jpg" alt="producto" class="c">
+                <div class="product-info" >
+                    <div>
+                        <p>$1200</p>
+                        <p>Producto 1</p>
+                       </div>
+                    <figure>
+                        <img src="./img/icons/bt_add_to_cart.svg" alt="icono de carrito" class=" product-info icon">
+                    </figure>
+                </div>
+            </div><!--fin tarjeta-->
+            <div class="product-car">
+                <img src="./img/pexels-dreamypixel-552774.jpg" alt="producto" class="product-img">
+                <div class="product-info">
+                   <div>
+                    <p>$1200</p>
+                    <p>Producto 1</p>
+                   </div>
+
+                    <figure>
+                        <img src="./img/icons/bt_add_to_cart.svg" alt="icono de carrito" class=" product-info icon">
+                    </figure>
+                </div>
+            </div>
+            <div class="product-car">
+                <img src="./img/pexels-pixabay-276517.jpg" alt="producto" class="c">
+                <div class="product-info" >
+                    <div>
+                        <p>$1200</p>
+                        <p>Producto 1</p>
+                       </div>
+                    <figure>
+                        <img src="./img/icons/bt_add_to_cart.svg" alt="icono de carrito" class=" product-info icon">
+                    </figure>
+                </div>
+            </div><!--fin tarjeta-->
+            <div class="product-car">
+                <img src="./img/pexels-taryn-elliott-4198566.jpg" alt="producto" class="c">
+                <div class="product-info" >
+                    <div>
+                        <p>$1200</p>
+                        <p>Producto 1</p>
+                       </div>
+                    <figure>
+                        <img src="./img/icons/bt_add_to_cart.svg" alt="icono de carrito" class=" product-info icon">
+                    </figure>
+                </div>
+            </div><!--fin tarjeta-->
+            <div class="product-car">
+                <img src="./img/pexels-dreamypixel-552774.jpg" alt="producto" class="product-img">
+                <div class="product-info">
+                   <div>
+                    <p>$1200</p>
+                    <p>Producto 1</p>
+                   </div>
+
+                    <figure>
+                        <img src="./img/icons/bt_add_to_cart.svg" alt="icono de carrito" class=" product-info icon">
+                    </figure>
+                </div>
+            </div>
+            <div class="product-car">
+                <img src="./img/pexels-pixabay-162426.jpg" alt="producto" class="c">
+                <div class="product-info" >
+                    <div>
+                        <p>$1200</p>
+                        <p>Producto 1</p>
+                       </div>
+                    <figure>
+                        <img src="./img/icons/bt_add_to_cart.svg" alt="icono de carrito" class=" product-info icon">
+                    </figure>
+                </div>
+            </div><!--fin tarjeta-->
+            <div class="product-car">
+                <img src="./img/pexels-pixabay-276517.jpg" alt="producto" class="c">
+                <div class="product-info" >
+                    <div>
+                        <p>$1200</p>
+                        <p>Producto 1</p>
+                       </div>
+                    <figure>
+                        <img src="./img/icons/bt_add_to_cart.svg" alt="icono de carrito" class=" product-info icon">
+                    </figure>
+                </div>
+            </div><!--fin tarjeta-->
+            <div class="product-car">
+                <img src="./img/pexels-taryn-elliott-4198566.jpg" alt="producto" class="product-img">
+                <div class="product-info">
+                   <div>
+                    <p>$1200</p>
+                    <p>Producto 1</p>
+                   </div>
+
+                    <figure>
+                        <img src="./img/icons/bt_add_to_cart.svg" alt="icono de carrito" class=" product-info icon">
+                    </figure>
+                </div>
+            </div>
+            <div class="product-car">
+                <img src="./img/pexels-pixabay-162426.jpg" alt="producto" class="c">
+                <div class="product-info" >
+                    <div>
+                        <p>$1200</p>
+                        <p>Producto 1</p>
+                       </div>
+                    <figure>
+                        <img src="./img/icons/bt_add_to_cart.svg" alt="icono de carrito" class=" product-info icon">
+                    </figure>
+                </div>
+            </div><!--fin tarjeta-->
+    </section>
 </body>
+
 </html>
