--- a/shop/index.html
+++ b/shop/index.html
@@ -9,15 +9,15 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;500;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./styles.css">
+  <link rel="stylesheet" href="styles/styles.css">
 
 </head>
 <body>
   <nav>
-    <img src="./icons/icon_menu.svg" alt="menu" class="menu">
+    <img src="img/icons/icon_menu.svg" alt="menu" class="menu">
 
     <div class="navbar-left">
-      <img src="./logos/logo_yard_sale.svg" alt="logo" class="logo">
+      <img src="img/logos/logo_yard_sale.svg" alt="logo" class="logo">
 
       <ul>
         <li>
@@ -45,7 +45,7 @@
       <ul>
         <li class="navbar-email">platzi@example.com</li>
         <li class="navbar-shopping-cart">
-          <img src="./icons/icon_shopping_cart.svg" alt="shopping cart">
+          <img src="img/icons/icon_shopping_cart.svg" alt="shopping cart">
           <div>2</div>
         </li>
       </ul>
@@ -117,7 +117,7 @@
 <!--lista de compra carrito-->
 <aside class="product-detail inactive">
     <div class="title-container">
-      <img src="./icons/flechita.svg" alt="arrow">
+      <img src="img/icons/flechita.svg" alt="arrow">
       <p class="title">My order</p>
     </div>
 
@@ -128,7 +128,7 @@
         </figure>
         <p>Bike</p>
         <p>$30,00</p>
-        <img src="./icons/icon_close.png" alt="close">
+        <img src="img/icons/icon_close.png" alt="close">
       </div>
 
       <div class="shopping-cart">
@@ -137,7 +137,7 @@
         </figure>
         <p>Bike</p>
         <p>$30,00</p>
-        <img src="./icons/icon_close.png" alt="close">
+        <img src="img/icons/icon_close.png" alt="close">
       </div>
 
       <div class="shopping-cart">
@@ -146,7 +146,7 @@
         </figure>
         <p>Bike</p>
         <p>$30,00</p>
-        <img src="./icons/icon_close.png" alt="close">
+        <img src="img/icons/icon_close.png" alt="close">
       </div>
 
       <div class="order">
@@ -166,7 +166,7 @@
   <!--DETALLE DE PRODUCTO-->
   <aside class="product-detailInfo inactive">
     <div class="product-detailInfo-close">
-      <img src="./icons/icon_close.png" alt="close">
+      <img src="img/icons/icon_close.png" alt="close">
     </div>
     <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="bike">
     <div class="product-infoDetail">
@@ -174,7 +174,7 @@
       <p>Bike</p>
       <p>With its practical position, this bike also fulfills a decorative function, add your hall or workspace.</p>
       <button class="primary-button add-to-cart-button">
-        <img src="./icons/bt_add_to_cart.svg" alt="add to cart">
+        <img src="img/icons/bt_add_to_cart.svg" alt="add to cart">
         Add to cart
       </button>
     </div>
@@ -191,7 +191,7 @@
             <p>Bike</p>
           </div>
           <figure>
-            <img src="./icons/bt_add_to_cart.svg" alt="">
+            <img src="img/icons/bt_add_to_cart.svg" alt="">
           </figure>
         </div>
       </div>
