avanzamos con el carro - BUENOOO CREO QUE YA ESTAMOS, DEBEREMOS AVANZAR CON EL TP NUESTRO SINO NO LLEGAMOS AL 17

--- a/shop/index.html
+++ b/shop/index.html
@@ -60,7 +60,7 @@
         </li>
 
         <li>
-          <a href="/">My account</a>
+          <a href="edituser.html">My account</a>
         </li>
 
         <li>
