--- a/rapsodiaartesanias/index.html
+++ b/rapsodiaartesanias/index.html
@@ -9,6 +9,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap"
         rel="stylesheet">
+
+    <link href="https://fonts.googleapis.com/css2?family=Teko:wght@300..700&display=swap" rel="stylesheet">
+ 
     <link rel="preload" href="styles/normalize.css" as="style">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="preload" href="styles/styles.css" as="style">
@@ -18,7 +21,7 @@
 
 <body>
     <header class="header">
-        <div class="contenedor">
+        <div class="contenedor-nav">
             <div class="barra">
                 <nav class="navegacion">
                     <img src="img/icons/icon_menu.svg" alt="menu" class="menu">
@@ -65,7 +68,7 @@
     </header><!--cierra header-->
 <section class="hero">
     <div class="contenido-hero">
-        <h2>Rapsodia <span>Artesanias</span></h2>
+        <h2>Rapsodia <span class="hero-span">Artesanias</span></h2>
         <div class="ubicacion">
 
             <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-map-pin" width="68" height="68" viewBox="0 0 24 24" stroke-width="1.5" stroke="#FFD166" fill="none" stroke-linecap="round" stroke-linejoin="round">
@@ -76,15 +79,84 @@
 
             <p>Catriel - Rio Negro - Argentina</p>
         </div>
-        <a class="boton" href="#">Contactar</a>
+        <a class="boton-secundario" href="#">Contactar</a>
     </div>
 </section>
+    <!--<img src="img/hero.jpg" alt="Hero image">-->
+    <main class="contenedor sombra">
+
+        <article class="article-presentacion">
+            <p>La elaboración de productos artesanales es un proceso que combina tradición, habilidad y creatividad para crear piezas únicas y de alta calidad. 
+                Cada producto es cuidadosamente hecho a mano por artesanos expertos, utilizando técnicas transmitidas de generación en generación y materiales seleccionados por su excelencia. 
+                Al elegir nuestros productos artesanales, estás asegurándote de adquirir no solo un objeto, sino una obra de arte que lleva consigo la dedicación y el amor por el oficio, 
+                garantizando una experiencia auténtica y una calidad incomparable.
+            </p>
+        </article>
+        <div class="contenedor dos-columnas">
+            <article class="entrada-blog">               
+                <img src="img/cartera_cuero1.jpg">
+                <p>Maecenas maximus urna vitae nisl semper, id volutpat ipsum scelerisque. Aenean nec ipsum finibus, eleifend dolor at, venenatis risus. Quisque varius orci et augue scelerisque luctus.</p>
+                <a href="#">Leer más</a>
+            </article>
+            <article class="entrada-blog">
+                <img src="img/libreta1.jpg">
+                <p>Maecenas maximus urna vitae nisl semper, id volutpat ipsum scelerisque. Aenean nec ipsum finibus, eleifend dolor at, venenatis risus. Quisque varius orci et augue scelerisque luctus.</p>
+                <a href="#">Leer más</a>
+            </article>
+        </div>
 
 
+        <h2> Mis servicios</h2>
+        <div class="servicios">
+            <section class="servicio">
+                <h3>Envíos</h3>
+                <div class="iconos">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-cube-send" width="60" height="60" viewBox="0 0 24 24" stroke-width="1.5" stroke="#597e8d" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                        <path d="M16 12.5l-5 -3l5 -3l5 3v5.5l-5 3z" />
+                        <path d="M11 9.5v5.5l5 3" />
+                        <path d="M16 12.545l5 -3.03" />
+                        <path d="M7 9h-5" />
+                        <path d="M7 12h-3" />
+                        <path d="M7 15h-1" />
+                      </svg>
+                </div>
+                <p>Contamos con servicio de Envíos</p>
+            </section>
+            <section class="servicio">
+                <h3>Contacto</h3>
+                <div class="iconos">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-map-pin" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#597e8d" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                        <path d="M9 11a3 3 0 1 0 6 0a3 3 0 0 0 -6 0" />
+                        <path d="M17.657 16.657l-4.243 4.243a2 2 0 0 1 -2.827 0l-4.244 -4.243a8 8 0 1 1 11.314 0z" />
+                      </svg>
+                </div>
+                <p>Nos podrás encontrar en Nuestro Local ó Ferias Artesanales</p>
+            </section>
+            <section class="servicio">
+                <h3>E-commerce</h3>
+                <div class="iconos">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-credit-card" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#597e8d" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                        <path d="M3 5m0 3a3 3 0 0 1 3 -3h12a3 3 0 0 1 3 3v8a3 3 0 0 1 -3 3h-12a3 3 0 0 1 -3 -3z" />
+                        <path d="M3 10l18 0" />
+                        <path d="M7 15l.01 0" />
+                        <path d="M11 15l2 0" />
+                      </svg>
+                </div>
+                <p>Disponemos varios medios de pagos</p>
+            </section>
+        </div>
+    
+
+        
+    </main>
 
 
-
-
+    <footer class="footer">
+        <p>Rapsodia Artesanias</p>
+    </footer>
 
 </body>
 
