CON EL TP NUESTRO SINO NO LLEGAMOS AL 17 - Bueno ya tenemos el index nos falta mil cosas mas

--- a/rapsodiaartesanias/index.html
+++ b/rapsodiaartesanias/index.html
@@ -36,7 +36,7 @@
                     </div>
                     <div class="navegacion-derecha">
                         <ul>
-                            <li><a href="nosotros.html" class="navegacion__enlace">Mi Cuenta</a></li>
+                            <li><a class="navegacion__enlace miCuenta">Mi Cuenta</a></li>
                             <li class="nav-compra-carrito" ><img src="img/icons/shopping-cart_9408015.png" alt="carrito"><div><span>2</span></div></li>
                         </ul>
 
@@ -50,7 +50,7 @@
                                 <li><a href="nosotros.html" class="navegacion__enlace">Nosotros</a></li>
                             </ul>
                             <ul>
-                                <li><a href="nosotros.html" class="navegacion__enlace">Mi Cuenta</a></li>
+                                <li><a href="nosotros.html" class="navegacion__enlace" >Mi Cuenta</a></li>
                             <li><a href="nosotros.html" class="navegacion__enlace">Mi Carrito</a></li>
                             </ul>
                         </div>
@@ -95,13 +95,13 @@
         <div class="contenedor dos-columnas">
             <article class="entrada-blog">               
                 <img src="img/cartera_cuero1.jpg">
-                <p>Maecenas maximus urna vitae nisl semper, id volutpat ipsum scelerisque. Aenean nec ipsum finibus, eleifend dolor at, venenatis risus. Quisque varius orci et augue scelerisque luctus.</p>
-                <a href="#">Leer más</a>
+                <p>Los mejores productos Artesanales los podras encontrar en nuestro Catalogo</p>
+                <a href="#">Catalogo</a>
             </article>
             <article class="entrada-blog">
                 <img src="img/libreta1.jpg">
-                <p>Maecenas maximus urna vitae nisl semper, id volutpat ipsum scelerisque. Aenean nec ipsum finibus, eleifend dolor at, venenatis risus. Quisque varius orci et augue scelerisque luctus.</p>
-                <a href="#">Leer más</a>
+                <p>¿Deseas un producto personalizado?</p>
+                <a href="#">Contacto</a>
             </article>
         </div>
 
@@ -124,7 +124,7 @@
                 <p>Contamos con servicio de Envíos</p>
             </section>
             <section class="servicio">
-                <h3>Contacto</h3>
+                <h3>Ubicación</h3>
                 <div class="iconos">
                     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-map-pin" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#597e8d" fill="none" stroke-linecap="round" stroke-linejoin="round">
                         <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
@@ -158,6 +158,7 @@
         <p>Rapsodia Artesanias</p>
     </footer>
 
+    <script src="js/scriptsMenu.js"></script>
 </body>
 
 </html>
