CON EL TP NUESTRO SINO NO LLEGAMOS AL 17 - Bueno ya tenemos el index nos falta mil cosas mas

--- a/rapsodiaartesanias/index.html
+++ b/rapsodiaartesanias/index.html
@@ -50,8 +50,8 @@
                                 <li><a href="nosotros.html" class="navegacion__enlace">Nosotros</a></li>
                             </ul>
                             <ul>
-                                <li><a href="nosotros.html" class="navegacion__enlace" >Mi Cuenta</a></li>
-                            <li><a href="nosotros.html" class="navegacion__enlace">Mi Carrito</a></li>
+                                <li><a href="nosotros.html" class="navegacion__enlace mi_cuenta" >Mi Cuenta</a></li>
+                            <li><a href="nosotros.html" class="navegacion__enlace mi_compra">Mi Carrito</a></li>
                             </ul>
                         </div>
                     </div>
@@ -63,6 +63,16 @@
                         </ul>
                     </div>
                 </nav>
+                <!--lista de compra carrito-->
+  <aside class="producto-detail inactive">
+    <div class="title-contenido">
+      <img src="img/icons/arrow.png" alt="arrow">
+      <p class="title">Mi Carrito</p>
+    </div>
+    <div class="mi-orden-contenido"></div>
+    </div>
+  </aside>
+
             </div><!--cierra barra-->
         </div><!--cierra contenedor-->
     </header><!--cierra header-->
