--- a/rapsodiaartesanias/index.html
+++ b/rapsodiaartesanias/index.html
@@ -24,9 +24,9 @@
         <div class="contenedor-nav">
             <div class="barra">
                 <nav class="navegacion">
-                    <img src="img/icons/icon_menu.svg" alt="menu" class="menu">
+                   <img src="img/icons/icon_menu.svg" alt="menu" class="menu">
                     <div class="navegacion-izquierda">
-                        <img src="img/logos/logosm.jpg" alt="logo" class="logo">
+                        <a href="index.html"> <img src="img/logos/logosm.jpg" alt="logo" class="logo"></a> 
 
                         <ul>
                             <li><a href="catalogo.html" class="navegacion__enlace">Catalogo</a></li>
@@ -50,14 +50,14 @@
                                 <li><a href="nosotros.html" class="navegacion__enlace">Nosotros</a></li>
                             </ul>
                             <ul>
-                                <li><a href="/" class="navegacion__enlace mi_cuenta" >Mi Cuenta</a></li>
+                                <li><a href="edit_usuario.html" id="editLink" class="navegacion__enlace mi_cuenta" >Editar Mi Datos</a></li>
                             <li><a href="/" class="navegacion__enlace mi_compra">Mi Carrito</a></li>
                             </ul>
                         </div>
                     </div>
                     <div class="menu-cuenta inactive">
                         <ul>
-                            <li><a href="/">Editar Mis Datos</a></li>
+                            <li><a href="edit_usuario.html" id="editLink">Editar Mis Datos</a></li>
                             <li><a href="/">Mis Compras</a></li>
                             <li><a href="/">Cerrar Sesión</a></li>
                         </ul>
@@ -168,7 +168,32 @@
         <p>Rapsodia Artesanias</p>
     </footer>
 
+    <script>
+        const usuario = [
+            {
+                nombre: "Juan Perez",
+                email: "jperez@gmail.com",
+                password: "123456",
+                telefono: "1234567890",
+                direccion: "Calle Falsa 123",
+                piso: "",
+                cp: "1234",
+                provincia: "Springfield",
+                pais: "Argentina",
+            }
+        ];
+
+        document.getElementById('editLink').addEventListener('click', function (e) {
+            e.preventDefault();
+            sessionStorage.setItem('usuario', JSON.stringify(usuario[0]));
+            window.location.href = 'edit_usuario.html';
+        });
+    </script>
+
     <script src="js/scriptsMenu.js"></script>
+    <script src="js/contacto.js"></script>
+    <script src="js/newUser.js"></script>
+    <script src="js/catalogo.js"></script>
 </body>
 
 </html>
