--- a/rapsodiaartesanias/registro_usuario.html
+++ b/rapsodiaartesanias/registro_usuario.html
@@ -61,7 +61,7 @@
                         <ul>
                             <li><a href="edit_usuario.html" id="editLink">Editar Mis Datos</a></li>
                             <li><a href="/">Mis Compras</a></li>
-                            <li><a href="/">Cerrar Sesión</a></li>
+                            <li><a href="login.html">Cerrar Sesión</a></li>
                         </ul>
                     </div>
                 </nav>
@@ -155,7 +155,7 @@
                     <span class="error-message"></span>
                 </div>
                 <div class="campo">
-                    <input type="button" value="Enviar" class="btn-form boton-secundario" onclick="newUser()">
+                    <input type="button" value="Registrar" class="btn-form boton-secundario" onclick="newUser()">
                 </div>
                 
             </form>
