--- a/rapsodiaartesanias/contacto.html
+++ b/rapsodiaartesanias/contacto.html
@@ -60,7 +60,7 @@
                         <ul>
                             <li><a href="edit_usuario.html" id="editLink">Editar Mis Datos</a></li>
                             <li><a href="/">Mis Compras</a></li>
-                            <li><a href="/">Cerrar Sesión</a></li>
+                            <li><a href="login.html">Cerrar Sesión</a></li>
                         </ul>
                     </div>
                 </nav>
