--- a/rapsodiaartesanias/edit_usuario.html
+++ b/rapsodiaartesanias/edit_usuario.html
@@ -39,7 +39,7 @@
                         <ul>
                             <li><a class="navegacion__enlace miCuenta">Mi Cuenta</a></li>
                             <li class="nav-compra-carrito"><img src="img/icons/shopping-cart_9408015.png" alt="carrito">
-                                <div><span>2</span></div>
+                                <div><span id="cart-count">0</span></div>
                             </li>
                         </ul>
 
