--- a/rapsodiaartesanias/catalogo.html
+++ b/rapsodiaartesanias/catalogo.html
@@ -38,7 +38,7 @@
                     <div class="navegacion-derecha">
                         <ul>
                             <li><a class="navegacion__enlace miCuenta">Mi Cuenta</a></li>
-                            <li class="nav-compra-carrito" ><img src="img/icons/shopping-cart_9408015.png" alt="carrito"><div><span>2</span></div></li>
+                            <li class="nav-compra-carrito" ><img src="img/icons/shopping-cart_9408015.png" alt="carrito"><div><span id="cart-count">0</span></div></li>
                         </ul>
 
                     </div>
