practica pre parcial

--- a/rapsodiaartesanias/index.html
+++ b/rapsodiaartesanias/index.html
@@ -58,7 +58,7 @@
                     <div class="menu-cuenta inactive">
                         <ul>
                             <li><a href="edit_usuario.html" id="editLink">Editar Mis Datos</a></li>
-                            <li><a href="/">Mis Compras</a></li>
+                            <li><a href="listadocompras.html">Mis Compras</a></li>
                             <li><a href="login.html">Cerrar Sesión</a></li>
                         </ul>
                     </div>
