terminamos los detalles del producto wiii---- 75%

--- a/rapsodiaartesanias/catalogo.html
+++ b/rapsodiaartesanias/catalogo.html
@@ -82,6 +82,11 @@
     <section class="main-container">
         <div class="cards-container"></div>
       </section>
+
+      <!--Detalle del producto-->
+    <aside  id="aside" class="product-detailInfo inactive ">
+
+    </aside>
 </main>
 
 
